# maintenanceminder

./: README.md  manage.py  pyproject.toml
.github/workflows/: black.yml
config/: settings.py  urls.py
maintenance/: admin.py  forms.py  models.py  urls.py  views.py
maintenance/migrations/: 0001_initial.py
maintenance/static/js/: htmx.min.js
maintenance/templates/: base.html
maintenance/templates/maintenance/: maintenance_confirm_delete.html  maintenance_detail.html  maintenance_form.html  maintenance_list.html
maintenanceminder/: asgi.py  settings.py  urls.py  wsgi.py
templates/maintenance/: add_record.html  index.html  upcoming.html
