[tool.poetry]
name = "maintenanceminder"
version = "0.1.0"
description = "A local-only vehicle maintenance & service tracker"
authors = ["StarkZarn <starkzarn@zarn.me>"]
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/starkzarn/maintenanceminder"
keywords = ["vehicle", "maintenance", "django", "tracking", "service", "car", "truck", "python"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
psycopg = {extras = ["binary"], version = "^3.2.1"}
htmx = "^0.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
